--- a/Week_2/report2.Rmd
+++ b/Week_2/report2.Rmd
@@ -54,7 +54,7 @@ The standard linear regression model is:
 
 where the addition to the sum of square residuals is a penalty for the size of the predictors, thus aiming for more variance explanation at the cost of biasedness. Specifically, the penalty factor is constructed as follows. $\lambda$ is a complexity parameter that controls the amount of shrinkage, with larger $\lambda$ being greater shrinkage. $\alpha$ is a mixed parameter between the Ridge regression and the Lasso. This allows the penalty to balance between the flexibility of the Ridge with the variable selection of the Lasso. First, $\beta^2_j$  corresponds to the Ridge regression parameter, a quadratic penalty that makes the Ridge regression a linear function of $y$. The solution adds $\lambda$ to the diagonal of $X^TX$ before inversion, thus making the problem non-singular even if $X^TX$ is not full rank. By doing this, coordinates are shrinked by a factor $\frac{dj^2}{dj^2 + \lambda}$, being $dj$ small singular values that correspond to the directions where the column space of $X$ has small variance. Second, $|\beta_j|$ corresponds to the Lasso penalty, a type of continuous subset selection that causes the weakest predictors to be set to $0$ if $\lambda$ is sufficiently large. 
 
-After the shrinkage method on the prediction matrix has been applied, the effect of the prediction matrix on the predicted vector is analyzed using the coefficient matrix. The diagnostics used for evaluating fitness are Root Mean Square Error (RMSE) and adjusted $R^2$, where smaller RMSE and larger $R^2$ account for stronger predictors.
+After the shrinkage method on the prediction matrix has been applied, the effect of the prediction matrix on the predicted vector is analyzed using the coefficient matrix. The diagnostics used for evaluating fitness are Root Mean Square Error (RMSE) and adjusted $R^2$, where smaller RMSE and larger $R^2$ indicate stronger predictors.
 
 Expected prediction error is estimated using the K-fold cross-validation by applying the shrinkage method and multiple regression ($\hat{f}(x)$) to an independent test sample. Specifically, data is split into $k$ equal parts, The k-th part is used to calculate the prediction error of the fitted model, using the objective function:
 $$
