--- a/kernel/krr.Rmd
+++ b/kernel/krr.Rmd
@@ -3,9 +3,16 @@ title: "krr"
 author: "Group3"
 date: "11/17/2021"
 output: pdf_document
+header-includes:
+  - \usepackage[utf8]{inputenc}
+  - \usepackage{natbib}
+  - \bibliographystyle{abbrvnat}
 ---
-
 \section{Introduction}
+```{r}
+print('test')
+```
+
 
 \section{Data}
 
